--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "1.6.1",
     "@heroicons/react": "1.0.5",
     "@testing-library/react": "13.2.0",
+    "bcrypt": "5.0.1",
     "graphql": "16.5.0",
     "mongodb": "4.6.0",
     "next": "12.1.6",
