--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@heroicons/react": "1.0.5",
     "@testing-library/react": "13.2.0",
     "@types/bcrypt": "5.0.0",
+    "axios": "0.27.2",
     "bcrypt": "5.0.1",
     "graphql": "16.5.0",
     "mongodb": "4.6.0",
     "next": "12.1.6",
+    "next-auth": "4.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.31.3",
     "swiper": "7.4.1"
   },
   "devDependencies": {
