--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "0.27.2",
     "bcrypt": "5.0.1",
     "graphql": "16.5.0",
+    "js-cookie": "3.0.1",
     "mongodb": "4.6.0",
     "next": "12.1.6",
     "next-auth": "4.3.4",
