--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "1.0.5",
     "@testing-library/react": "13.2.0",
     "@types/bcrypt": "5.0.0",
+    "@types/js-cookie": "3.0.2",
     "axios": "0.27.2",
     "bcrypt": "5.0.1",
     "graphql": "16.5.0",
